Fix placement of TOC full toggle button on mobile

--- a/_sass/components/_argument.scss
+++ b/_sass/components/_argument.scss
@@ -508,6 +508,7 @@ em {
   }
   .argument-map {
     display: block;
+    padding-bottom: 3em;
   }
   .argument-map .argument-shape-link .argument-title {
     max-width: fit-content;
